# wavepacket_scattering

./: .gitignore  CMakeLists.txt  clean.sh  scattering.py  setup.py  wavepacket_c.py  wavepacket_python.py
src/: bindings.cpp  integrator.cpp  integrator.hpp  my_lib.cpp  my_lib.hpp  type_definitions.hpp  wavepacket.cpp  wavepacket.hpp
src/wavepacket/: __init__.py  py_wavepacket.py
tests/: test_basic.py
